[package]
name = "klib-rs"
version = "0.1.0"
edition = "2024"
authors = ["Nyka"]
license = "MIT"
description = "kernel mode function export library and inline hook kernel"
repository = "https://github.com/Niyka1/klib-rs"
documentation = "https://docs.rs/klib-rs"

[features]
default = []
kernel = []
ntifs = []
ntddk = []


[dependencies]
iced-x86 = { version = "1.21.0", default-features = false, features = ["no_std", "decoder"] }